--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 </head>
 <body>
+    <!-- 加载提示层 -->
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-content">
+            <div class="loading-spinner"></div>
+            <h2>正在加载皇帝数据...</h2>
+            <p id="loading-message">请稍候，正在从云端获取数据</p>
+        </div>
+    </div>
+
     <div id="app">
         <header>
             <h1>中国皇帝猜谜游戏</h1>
