update: 修改加载提示文字为'正在加载数据，可能要等待10-20秒'

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="loading-overlay" class="loading-overlay">
         <div class="loading-content">
             <div class="loading-spinner"></div>
-            <h2>正在加载皇帝数据...</h2>
-            <p id="loading-message">请稍候，正在从云端获取数据</p>
+            <h2>正在加载数据，可能要等待10-20秒</h2>
+            <p id="loading-message">请稍候...</p>
         </div>
     </div>
 
