feat: 在朝代选择下拉框中添加'其他'选项

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                                         <option value="元朝">元朝</option>
                                         <option value="明朝">明朝</option>
                                         <option value="清朝">清朝</option>
+                                        <option value="其他">其他</option>
                                     </select>
                                 </div>
                                 
@@ -306,6 +307,7 @@
                                         <option value="元朝">元朝</option>
                                         <option value="明朝">明朝</option>
                                         <option value="清朝">清朝</option>
+                                        <option value="其他">其他</option>
                                     </select>
                                     <select id="status-filter">
                                         <option value="all">所有状态</option>
