update: 修改首页底部提示语为'学习中国历史，了解中国皇帝'

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         </div>
 
         <footer>
-            <p>学习中国历史，了解皇帝文化</p>
+            <p>学习中国历史，了解中国皇帝</p>
         </footer>
     </div>
 
