--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     <!-- JavaScript 模块 -->
     <!-- Firebase 配置和同步管理器 -->
     <script src="js/firebase-config.js"></script>
-    <script src="js/firebase-sync-manager.js"></script>
+    <script src="js/firebase-sync-manager.js?v=2"></script>
     
     <!-- 游戏核心模块 -->
     <script src="js/types.js"></script>
