--- a/fix-missing-hint-ids.html
+++ b/fix-missing-hint-ids.html
@@ -82,16 +82,45 @@
             logDiv.scrollTop = logDiv.scrollHeight;
         }
 
+        // 等待Firebase SDK加载
+        function waitForFirebase() {
+            return new Promise((resolve, reject) => {
+                let attempts = 0;
+                const maxAttempts = 50;
+                
+                const checkFirebase = () => {
+                    attempts++;
+                    if (typeof firebase !== 'undefined' && typeof initializeFirebase === 'function') {
+                        resolve();
+                    } else if (attempts >= maxAttempts) {
+                        reject(new Error('Firebase SDK 加载超时'));
+                    } else {
+                        setTimeout(checkFirebase, 100);
+                    }
+                };
+                
+                checkFirebase();
+            });
+        }
+
         async function fixMissingHintIds() {
             try {
                 fixBtn.disabled = true;
                 showStatus('正在初始化 Firebase...', 'info');
                 log('开始修复流程...');
 
+                // 等待 Firebase SDK 加载
+                log('等待 Firebase SDK 加载...');
+                await waitForFirebase();
+                log('Firebase SDK 已加载');
+
                 // 初始化 Firebase
-                if (!initializeFirebase()) {
+                log('初始化 Firebase...');
+                const initialized = initializeFirebase();
+                if (!initialized) {
                     throw new Error('Firebase 初始化失败');
                 }
+                log('Firebase 初始化成功');
 
                 const db = window.getFirebaseDatabase();
                 const emperorsRef = db.ref('emperors');
