--- a/hint-generator/index.html
+++ b/hint-generator/index.html
@@ -196,6 +196,7 @@
     <script src="config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/firebase-manager.js"></script>
+    <script src="js/ai-service-manager.js"></script>
     <script src="js/gemini-api.js"></script>
     <script src="js/ui-manager.js"></script>
     <script src="js/app.js"></script>
