在游戏管理界面添加五胡十六国朝代选项

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                                         <option value="三国">三国</option>
                                         <option value="西晋">西晋</option>
                                         <option value="东晋">东晋</option>
+                                        <option value="五胡十六国">五胡十六国</option>
                                         <option value="南北朝">南北朝</option>
                                         <option value="隋朝">隋朝</option>
                                         <option value="唐朝">唐朝</option>
@@ -298,6 +299,7 @@
                                         <option value="三国">三国</option>
                                         <option value="西晋">西晋</option>
                                         <option value="东晋">东晋</option>
+                                        <option value="五胡十六国">五胡十六国</option>
                                         <option value="南北朝">南北朝</option>
                                         <option value="隋朝">隋朝</option>
                                         <option value="唐朝">唐朝</option>
