feat: 添加批量生成提示词功能
- 新增generateMultipleHints方法，一次生成5个提示词
- 添加复选框UI，用户可以勾选要添加的提示词
- 修改handleGenerateHint使用批量生成
- 修改handleAddHintToList支持批量添加选中的提示词
- 新增displayGeneratedHints方法显示带复选框的提示词列表
- 添加相应的CSS样式
- 更新HTML结构，移除旧的textarea方式

--- a/hint-generator/index.html
+++ b/hint-generator/index.html
@@ -140,18 +140,11 @@
                                 <label><input type="radio" name="add-hint-difficulty" value="hard"> 困难</label>
                             </div>
                         </div>
-                        <button id="generate-hint-btn" class="primary-btn">🤖 AI 生成提示词</button>
+                        <button id="generate-hint-btn" class="primary-btn">🤖 AI 生成5个提示词</button>
                     </div>
 
                     <div id="new-hint-result" style="display: none;">
-                        <div class="form-group">
-                            <label>生成的提示词</label>
-                            <textarea id="new-hint-content" rows="3"></textarea>
-                        </div>
-                        <div class="action-buttons">
-                            <button id="add-hint-to-list-btn" class="primary-btn">添加到列表</button>
-                            <button id="regenerate-hint-btn" class="secondary-btn">重新生成</button>
-                        </div>
+                        <!-- 这里会动态显示生成的提示词列表 -->
                     </div>
                 </div>
             </div>
