feat: 在皇帝管理界面的朝代下拉菜单中添加辽和金
- 在添加皇帝的朝代选择中添加'辽'和'金'选项
- 在筛选器的朝代选择中也添加'辽'和'金'选项
- 位置在'南宋'之后，'元朝'之前

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                                         <option value="五代十国">五代十国</option>
                                         <option value="北宋">北宋</option>
                                         <option value="南宋">南宋</option>
+                                        <option value="辽">辽</option>
+                                        <option value="金">金</option>
                                         <option value="元朝">元朝</option>
                                         <option value="明朝">明朝</option>
                                         <option value="清朝">清朝</option>
@@ -306,6 +308,8 @@
                                         <option value="五代十国">五代十国</option>
                                         <option value="北宋">北宋</option>
                                         <option value="南宋">南宋</option>
+                                        <option value="辽">辽</option>
+                                        <option value="金">金</option>
                                         <option value="元朝">元朝</option>
                                         <option value="明朝">明朝</option>
                                         <option value="清朝">清朝</option>
